--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -1,5 +1,5 @@
 <p class="header set">User settings <span uk-icon="icon: settings; ratio: 1.4"></span></p>
-
+<span id='set-reload' data-reload="false" hidden></span>
 <div class="strike part"><span>Change email address:</span></div>
   <div uk-grid>
     <%= form_with model: @user do |f| %>
@@ -18,7 +18,6 @@
       <%= content_tag :p, '', id: 'mail-update-info', class: 'update-info' %>
     </div>
   </div>
-
 <div class="strike part"><span>Change password:</span></div>
   <div uk-grid>
     <%= form_with model: @user do |f| %>
@@ -39,7 +38,6 @@
       <%= content_tag :p, '', id: 'pass-update-info', class: 'update-info' %>
     </div>
   </div>
-
 <div class="strike part"><span>Platforms:</span></div>
 <p class="discription">List of platforms lets you filter your games. You obtain a platform by adding a game to a collection that requires such information. You can delete unwanted platforms below. Deleting platform will not delete your games for this platform, will only disable filter option for this platform.</p>
 <%= render 'platforms/platforms' %>
