--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -88,6 +88,7 @@ a.del-user-btn {
     font-size: 15px;
     border: thin solid #afafaf;
     width: fit-content;
+    width: -moz-fit-content;
     padding: 0px 5px;
     text-align: center;
     border-radius: 3px;
