--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -24,7 +24,7 @@
       <table class="set-email-pass">
         <tr>
         <td class="uk-position-relative">
-          <%= f.password_field :password, id: 'change-password', class: 'uk-input set-input password', placeholder: 'New password' %>
+          <%= f.password_field :password, id: 'change-password', class: 'uk-input set-input password', placeholder: 'New password', autocomplete: 'new-password' %>
           <button class="uk-button unmask" type="button"></button>
           <%= content_tag :span, svg('key'), id: 'password-icon', class: 'set-input-icon'%>
         <td class="btn disabled">
