--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -1,9 +1,5 @@
 
 
 <div class="uk-cover-container uk-height-medium">
-    <iframe src="https://www.youtube.com/embed/jHzMYJGOoYc?controls=0autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent" width="1920" height="1080" frameborder="0" allowfullscreen uk-cover></iframe>
-</div>
-
-<div class="uk-cover-container uk-height-medium">
-    <iframe src="https://www.youtube-nocookie.com/embed/c2pz2mlSfXA?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent" width="1920" height="1080" frameborder="0" allowfullscreen uk-cover></iframe>
+    <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
 </div>
