--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -15,7 +15,10 @@
       </table>
     <% end %>
     <div>
-      <%= content_tag :p, '', id: 'mail-update-info', class: 'update-info' %>
+      <p id="mail-update-info" class="update-info">
+        <span uk-icon="check"></span>
+        <span></span>
+      </p>
     </div>
   </div>
 <div class="strike part"><span>Change password:</span></div>
@@ -35,7 +38,10 @@
       <p id="password-min">6 characters minimum</p>
     <% end %>
     <div>
-      <%= content_tag :p, '', id: 'pass-update-info', class: 'update-info' %>
+      <p id="pass-update-info" class="update-info">
+        <span uk-icon="check"></span>
+        <span></span>
+      </p>
     </div>
   </div>
 <div class="strike part"><span>Platforms:</span></div>
