Experiment with landing page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,7 @@ $disabled: #b4b4b4;
 @import "shares";
 @import "settings";
 @import "game_offc";
+@import "landing_page";
 
 // NAVIGATION
 .logo {
