--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -1,70 +1,209 @@
-<div class="look-title">
-<p>Still Have them</p>
-<span>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam odio eos, numquam sunt mollitia sequi! Ducimus libero possimus dicta doloribus. Soluta eius dicta quidem unde assumenda ratione, hic corporis fugit!
-</span>
+<div class="lp-top">
+  <span>Still Have Them</span>
+  <p>Do you keep your games?</p>
+  <%= link_to signin_path,  { :remote => true, "uk-toggle" => "target: #signin-modal", class: 'uk-button lp-button login-button' }  do %>
+  <span uk-icon="lock"></span>
+  LogIn
+  <% end %>
 </div>
 
+<p class="lp-about uk-text-justify"><span>Still Have Them</span> is a <span>free</span> tool to help you keep track of your <span>video game collection</span>. It’s simple design is oriented around your games and your games only. There are <span>no distracions</span> and <span>no ads.</span></p>
 
-<div class="features uk-position-relative uk-visible-toggle" tabindex="-1" uk-slideshow="animation: fade">
-  <div uk-grid>
-  <div class="f-list">
-    <p>Features</p>
-    <ul class="">
-      <li uk-slideshow-item="0"><a href="#">Search with IGDB</a></li>
-      <li uk-slideshow-item="1"><a href="#">Multiple collections</a></li>
-      <li uk-slideshow-item="2"><a href="#">Game info</a></li>
-      <li uk-slideshow-item="3"><a href="#">Searching/filtering</a></li>
-      <li uk-slideshow-item="4"><a href="#">Different views</a></li>
-      <li uk-slideshow-item="5"><a href="#">Dark Theme</a></li>
-      <li uk-slideshow-item="6"><a href="#">Graphs</a></li>
-      <li uk-slideshow-item="7"><a href="#">Sharing</a></li>
+<div class="uk-grid-small" uk-grid>
+  <div>
+  <%= link_to signup_path,  { :remote => true, "uk-toggle" => "target: #signup-modal", class: 'uk-button lp-button lp-big' } do %>
+  <span uk-icon="user"></span>
+  Sign Up
+  <% end %>
+  </div>
+
+  <div>
+  <%= link_to 'http://localhost:3000/shared/Htv1mh2ez-NbC13a6egYLgM6Aes', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
+    <%= svg 'shelf28' %>
+    View a sample collection
+  <% end %>
+  </div>
+
+  <div>
+  <%= link_to root_url, { class: 'uk-button lp-button lp-play lp-big'} do %>
+    <%= svg 'play' %>
+    Watch app overview
+  <% end %>
+  </div>
+</div>
+
+<div class="frame" uk-slideshow="ratio: 1180:643; animation: fade">
+
+    <ul class="uk-slideshow-items lp-images">
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small01.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/01.png" => "1.8x" },
+            alt: 'video game collection viewed as game covers') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">The first thing you see upon logging in is YOUR GAMES!</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small02.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/02.png" => "1.8x" },
+            alt: 'video game collection, game info and screenshots') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Review each game's basic info and view screenshots.</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small03.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/03.png" => "1.8x" },
+            alt: 'video game collection viewed as panels, open panel shows game info and screenshots') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Change between three different games views. Find the one that suits you best.</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small04.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/04.png" => "1.8x" },
+            alt: 'video game collection viewed as a list, modal shows game info and screenshots') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Or, switch between them seamlessly whenever you want.</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small05.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/05.png" => "1.8x" },
+            alt: 'search video games form with options and filters') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Search games by title, developer or character. Use basic search filters.</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small06.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/06.png" => "1.8x" },
+            alt: 'search history') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Use search history to go back to previous results.</p>
+            </div>
+        </li>
+
+        <li>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small07.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/07.png" => "1.8x" },
+            alt: 'stats and graphs about your video game collection') %>
+            <div class="lp-overlay uk-position-bottom-left">
+                <p class="uk-margin-remove">Learn more about your collection by studying stats and graphs.</p>
+            </div>
+        </li>
     </ul>
-  </div>
-  <div class="f-movies uk-width-expand">
-    <ul class="uk-slideshow-items">
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/test02.mov" autoplay loop muted playsinline uk-cover></video>
-          <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-slide-bottom">
-              <h3 class="uk-margin-remove">Bottom</h3>
-              <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-      <li>
-        <video src="https://still-have-them.s3.eu-central-1.amazonaws.com/save_02_720p.mov" autoplay loop muted playsinline uk-cover></video>
-      </li>
-    </ul>
-  </div>
+
+    <div class="lp-scr-info">
+      <a class="lp-next" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+    </div>
+
+    <div class="lp-dotnav-position">
+        <ul class="uk-dotnav">
+            <li uk-slideshow-item="0"><a href="#">Item 1</a></li>
+            <li uk-slideshow-item="1"><a href="#">Item 2</a></li>
+            <li uk-slideshow-item="2"><a href="#">Item 3</a></li>
+            <li uk-slideshow-item="3"><a href="#">Item 4</a></li>
+            <li uk-slideshow-item="4"><a href="#">Item 5</a></li>
+            <li uk-slideshow-item="5"><a href="#">Item 6</a></li>
+            <li uk-slideshow-item="6"><a href="#">Item 7</a></li>
+        </ul>
+    </div>
+
+  <div class="fake-buttons">
+    <div class="fb"></div>
+    <div class="fb"></div>
+    <div class="fb"></div>
   </div>
 </div>
 
-<div class="check-share">
-  Check out the sample collection!
-  <span>- no acount needed!</span>
+<p class="f-head">Features:</p>
+
+<div class="uk-child-width-1-2" uk-grid>
+  <div>
+      <p class="f-title">SEARCH GAMES WITH IGDB</p>
+      <p class="uk-text-justify">Easy search and add games with IGDB, the world’s largest database for video and computer games. You can revisit last searches with search history. Search by game title, developer or character.</p>
+  </div>
+  <div>
+      <p class="f-title">MULTIPLE COLLECTIONS</p>
+      <p class="uk-text-justify">Create multiple collections and store games according to your preferences.</p>
+  </div>
 </div>
 
-<div class="check-login">
-  Login
+<div class="uk-child-width-1-2" uk-grid>
+  <div>
+      <p class="f-title">PLATFORM AND FORMAT INFORMATION</p>
+      <p class="uk-text-justify">Create collections that will require platform and format information for each game added to these collections.</p>
+  </div>
+  <div>
+      <p class="f-title">MOVE, COPY AND EDIT GAMES</p>
+      <p class="uk-text-justify">Move, and copy games between and inside collections. Edit games format and platform information. </p>
+  </div>
 </div>
 
-<div class="create">
-  Create Free Account
+<div class="uk-child-width-1-2" uk-grid>
+  <div>
+      <p class="f-title">DIFFERENT VIEWS</p>
+      <p class="uk-text-justify">There are three different ways to view your games: as covers, as panels and inside a list. You can seamlessly switch between views whenever you want. </p>
+  </div>
+  <div>
+      <p class="f-title">SEARCH, FILTER AND SORT</p>
+      <p class="uk-text-justify">Easily search and filter through your games. Search by game's title or developer, filter by platform and format, sort by release date, title and date added.</p>
+  </div>
+</div>
+
+<div class="uk-child-width-1-2" uk-grid>
+  <div>
+      <p class="f-title">SHARE</p>
+      <p class="uk-text-justify">Share collections with anyone (including people who don’t have a StillHaveThem account) via a unique URL. Shareable links can be maintained and edited.</p>
+  </div>
+  <div>
+      <p class="f-title">STATS AND GRAPHS</p>
+      <p class="uk-text-justify">Check single collection stats or take a look at your whole library. Enjoy data presented in nice-looking graphs.</p>
+  </div>
+</div>
+
+<div class="uk-child-width-1-2" uk-grid>
+  <div>
+      <p class="f-title">DARK THEME</p>
+      <p class="uk-text-justify">Change background and UI elements to dark. It looks great and is easier on the eyes.</p>
+  </div>
+  <div>
+      <p class="f-title">EXPORT</p>
+      <p class="uk-text-justify">Export your collections to spreadsheet document at any time.</p>
+  </div>
+</div>
+
+<footer class="lp-footer">
+  <ul>
+    <li><%= link_to "TERMS", root_url, class: "about-link" %></li>
+    <li><%= link_to "PRIVACY", root_url, class: "about-link" %></li>
+  </ul>
+</footer>
+
+<div id="signup-modal" class="uk-flex-top" uk-modal>
+  <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+    <button class="uk-modal-close-default" type="button" uk-close></button>
+    <div class="modal-header">
+      <p class="header"><span class="signup-title">Create a new account </span><span><%= image_tag('lock.svg', alt: 'account logo, lock', class: 'lock-icon', draggable: 'false', width: 30)%></span><span class="its-free"> - it's free!</span></p>
+      <p class="have-account">Have an account? <%= link_to 'Sign In', signin_path,  {:remote => true, "uk-toggle" => "target: #signin-modal", class: 'uk-link-muted' }  %> </p>
+    </div>
+    <div class="modal-content"></div>
+  </div>
+</div>
+
+<div id="signin-modal" class="uk-flex-top" uk-modal>
+  <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+    <button class="uk-modal-close-default" type="button" uk-close></button>
+    <div class="modal-header">
+      <p class="header"><span class="signup-title">Log in </span><span><%= image_tag('lock_open.svg', alt: 'account logo, lock', class: 'lock-icon', draggable: 'false', width: 30)%></span></p>
+      <p class="have-account">Don't have an account? <%= link_to 'Sign Up', signup_path,  {:remote => true, "uk-toggle" => "target: #signup-modal", class: 'uk-link-muted' }  %> </p>
+    </div>
+    <div class="modal-content"></div>
+  </div>
 </div>
