--- a/app/views/layouts/shared.html.erb
+++ b/app/views/layouts/shared.html.erb
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Shared | Still Have Them</title>
+    <% theme = current_sh_theme %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag "#{current_sh_theme}", id: 'theme-control', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0' %>
-    <%= favicon_link_tag asset_path('favicon.ico') %>
+    <%= favicon(theme) %>
   </head>
   <body>
     <% if guest_logged? && !shared_collections.empty? %>
