--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -49,7 +49,7 @@
                 </div>
             <% end %>
             <% if summary = get_summary(game, 280, 50) %>
-                <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= x_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary(<%= x_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= x_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= x_id %>)" uk-icon="icon: triangle-up"></button></span>
+                <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= x_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary('<%= x_id %>')" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= x_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary('<%= x_id %>')" uk-icon="icon: triangle-up"></button></span>
             </p>
             <% end %>
             <% end %>
